--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
         </style>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>AzerType</title>
     <script src="script.js" defer></script>
 </head>
 <body>
