--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>AzerType</h1>
         <h2>Are you fast enough ?</h2>
     </header>
-    <container class="container">
+    <container class="containere">
         <p class="rules">The game is simple, you have to write the most word possible,
             in 30 secondes.
         </p>
